--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -642,7 +642,7 @@ actions:
         description: The list of indicators that have been rejected during the update
         type: '[]string'
         required: false
-        example: ['example.com', '10.0.0.1']
+        example: "['example.com', '10.0.0.1']"
       threat:
         title: Threat
         description: The information about the threat
@@ -658,7 +658,7 @@ actions:
         description: Comma-separated list of investigation statuses to include in the result. Possible values are OPEN, CLOSED, INVESTIGATING, WAITING
         type: '[]string'
         required: false
-        example: ['CLOSED']
+        example: "['CLOSED']"
       start_time:
         title: Start Time
         description: An optional ISO-formatted timestamp, where only investigations whose createTime is after this date will be returned
@@ -729,13 +729,13 @@ actions:
         description: A list of found investigations
         type: '[]investigation'
         required: true
-        example: [{"assignee": {"email": "user@example.com","name": "Ellen Example"},"created_time": "2018-06-06T16:56:42Z","disposition": "BENIGN","first_alert_time": "2018-06-06T16:56:42Z","last_accessed": "2018-06-06T16:56:42Z","latest_alert_time": "2018-06-06T16:56:42Z","organization_id": "174e4f99-2ac7-4481-9301-4d24c34baf06","priority": "CRITICAL","rrn": "rrn:example","source": "ALERT","status": "OPEN","title": "Example Title"}]
+        example: "[{'assignee': {'email': 'user@example.com','name': 'Ellen Example'},'created_time': '2018-06-06T16:56:42Z','disposition': 'BENIGN','first_alert_time': '2018-06-06T16:56:42Z','last_accessed': '2018-06-06T16:56:42Z','latest_alert_time': '2018-06-06T16:56:42Z','organization_id': '174e4f99-2ac7-4481-9301-4d24c34baf06','priority': 'CRITICAL','rrn': 'rrn:example','source': 'ALERT','status': 'OPEN','title': 'Example Title'}]"
       metadata:
         title: Metadata
         description: The pagination parameters used to generate this page result
         type: investigation_metadata
         required: true
-        example: {"index": 0,"size": 1,"total_data": 1,"total_pages": 1}
+        example: "{'index': 0,'size': 1,'total_data': 1,'total_pages': 1}"
   create_investigation:
     title: Create Investigation
     description: Allows to create investigation manually
