Update input and output

--- a/.github/workflows/plugin_release.yml
+++ b/.github/workflows/plugin_release.yml
@@ -54,6 +54,7 @@ on:
         description: 'Docker image cleanup.'
         required: true
         default: 'None'
+        type: choice
         options:
           - 'None'
           - 'All'
@@ -64,6 +65,7 @@ on:
       INSIGHT_KOMAND_PLUGIN_ALL:
         description: 'Plugin release batching option. Leave empty to upload by name, otherwise select All, Go, or Python to release plugins, respectively.'
         required: true
+        type: choice
         default: ''
         options:
           - ''
@@ -75,14 +77,9 @@ on:
         default: 'master'
         required: true
       INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION:
-        description: 'Plugin release options. Typically all values should be selected.'
+        description: 'Plugin release options, comma separated. Typically all values should be selected. Input options are Icon, Registry, Market, Help'
         required: true
-        default: ['Icon', 'Registry', 'Market', 'Help']
-        options:
-          - 'Icon'
-          - 'Registry'
-          - 'Market'
-          - 'Help'
+        default: 'Icon,Registry,Market,Help'
       INSIGHT_KOMAND_SIMULATE:
         description: 'Check to run this release job as a simulation (affects all infrastructure).'
         required: true
@@ -95,9 +92,9 @@ on:
         description: 'Check to override plugin blacklists (affects all release targets).'
         required: true
         default: false
-  pull_request:
+  push:
     branches:
-      - 'master'
+      - master
 
 env:
   GITHUB_ORG: "rapid7"
@@ -116,23 +113,32 @@ env:
 jobs:
   release:
     runs-on: ubuntu-latest
-    outputs:
-      PLUGINS_DETAILS: ${{ steps.setupAutoPR.outputs.plugins_details }}
-      ENVIRONMENT: ${{ steps.setupAutoPR.outputs.environment }}
-      AUTOMERGE: ${{ steps.setupAutoPR.outputs.automerge }}
+
     steps:
       - name: Set up environment variables
         id: setUpEnvironmentVariables
         run: |
           # Setup environment variables from input
-          echo "INSIGHT_KOMAND_PLUGIN_NAME=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_NAME }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_PLUGIN_ALL=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_ALL }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_SIMULATE=${{ github.event.inputs.INSIGHT_KOMAND_SIMULATE }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_FORCE_UPDATE=${{ github.event.INSIGHT_KOMAND_FORCE_UPDATE }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION=${{ github.event.INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_CLEAN=${{ github.event.INSIGHT_KOMAND_CLEAN }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_BRANCH=${{ github.event.INSIGHT_KOMAND_BRANCH }}" >> $GITHUB_ENV
-          echo "INSIGHT_KOMAND_OVERRIDE_BLACKLISTS=${{ github.event.INSIGHT_KOMAND_OVERRIDE_BLACKLISTS }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_PLUGIN_NAME=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_NAME || '' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_PLUGIN_ALL=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_ALL || '' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_SIMULATE=${{ github.event.inputs.INSIGHT_KOMAND_SIMULATE || 'false' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_FORCE_UPDATE=${{ github.event.INSIGHT_KOMAND_FORCE_UPDATE || 'false' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION=${{ github.event.INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION || 'Icon,Registry,Market,Help' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_CLEAN=${{ github.event.INSIGHT_KOMAND_CLEAN || 'None' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_BRANCH=${{ github.event.INSIGHT_KOMAND_BRANCH || 'master' }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_OVERRIDE_BLACKLISTS=${{ github.event.INSIGHT_KOMAND_OVERRIDE_BLACKLISTS || 'false' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_US=${{ github.event.RELEASE_PROD_CLOUD_US || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_EU=${{ github.event.RELEASE_PROD_CLOUD_EU || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_AP=${{ github.event.RELEASE_PROD_CLOUD_AP || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_AU=${{ github.event.RELEASE_PROD_CLOUD_AU || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_CA=${{ github.event.RELEASE_PROD_CLOUD_CA || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_US2=${{ github.event.RELEASE_PROD_CLOUD_US2 || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_PROD_CLOUD_US3=${{ github.event.RELEASE_PROD_CLOUD_US3 || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_HUB_PROD=${{ github.event.RELEASE_HUB_PROD || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_HUB_STAGING=${{ github.event.RELEASE_HUB_STAGING || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_ALLIANCE_PROD=${{ github.event.RELEASE_ALLIANCE_PROD || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_ALLIANCE_STAGING=${{ github.event.RELEASE_ALLIANCE_STAGING || 'true' }}" >> $GITHUB_ENV
+          echo "RELEASE_INT_CLOUD_US=${{ github.event.RELEASE_INT_CLOUD_US || 'true' }}" >> $GITHUB_ENV
 
       - name: Checkout Repository
         id: checkoutRepository
@@ -395,9 +401,6 @@ jobs:
           cd plugins
           export PLUGINS_DETAILS=$(cat plugins/plugin.properties)
           echo "PLUGINS_DETAILS=$PLUGINS_DETAILS" >> $GITHUB_ENV
-          echo "plugins_details=$PLUGINS_DETAILS" >> "$GITHUB_OUTPUT"
-          echo "environment=staging" >> "$GITHUB_OUTPUT"
-          echo "automerge=true" >> "$GITHUB_OUTPUT"
 
       - name: Announce Plugin Release Failure
         id: announcePluginReleaseFailure
