--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -1126,11 +1126,11 @@ actions:
         example: {"assignee": {"email": "user@example.com","name": "Ellen Example"},"created_time": "2018-06-06T16:56:42Z","disposition": "BENIGN","first_alert_time": "2018-06-06T16:56:42Z","last_accessed": "2018-06-06T16:56:42Z","latest_alert_time": "2018-06-06T16:56:42Z","organization_id": "174e4f99-2ac7-4481-9301-4d24c34baf06","priority": "CRITICAL","rrn": "rrn:example","source": "ALERT","status": "OPEN","title": "Example Title"}
   query:
     title: Get Query Results
-    description: Get query results for a LEQL query by query ID
+    description: Get query results for a LEQL query by log ID
     input:
       id:
         title: ID
-        description: Query ID
+        description: Log ID
         type: string
         example: 174e4f99-2ac7-4481-9301-4d24c34baf06
         required: true
