add sdk version to plugin.spec.yaml

--- a/plugins/python_3_script/plugin.spec.yaml
+++ b/plugins/python_3_script/plugin.spec.yaml
@@ -9,6 +9,10 @@ status: []
 description: Python is a programming language that lets you work quickly and integrate systems more effectively. This plugin allows you to run Python 3 code. It includes Python 3.6.5 and its standard library as well as the following 3rd party libraries
 version: 4.0.6
 supported_versions: ["Python 3.8.1"]
+sdk:
+  type: full
+  version: 5
+  user: nobody
 enable_cache: true
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/python_3_script
